Make typescript happy - Declare youtube-api-search as a module

--- a/src/App.less
+++ b/src/App.less
@@ -1,13 +1,17 @@
 @import '~antd/dist/antd.dark.less';
 @import '~antd/dist/antd.compact.less';
 
-@blue: #3F99F1;
+@blue: #3f99f1;
 @dark-blue: #153047;
-@white: #FFFFFF;
+@white: #ffffff;
 
 @primary-color: @blue;
 @text-color: @white;
 @background-color-base: @dark-blue;
+
+input {
+  color: black;
+}
 
 .App-header {
   background-color: @background-color-base;
