--- a/src/App.less
+++ b/src/App.less
@@ -1,6 +1,3 @@
-@import '~antd/dist/antd.dark.less';
-@import '~antd/dist/antd.compact.less';
-
 @blue: #3f99f1;
 @dark-blue: #153047;
 @white: #ffffff;
@@ -23,4 +20,22 @@ input {
   justify-content: center;
   position: relative;
   z-index: 1;
+}
+
+.select__SelectOption {
+  display: flex;
+  flex-direction: row;
+  padding: 1em;
+
+  .thumbnail {
+    padding-right: 1em;
+  }
+
+  &.select__SelectOptionFocused {
+    background-color: orange;
+  }
+
+  &.select__SelectOptionSelected {
+    background-color: red;
+  }
 }
