--- a/src/components/CountdownSetup/CountdownSetup.less
+++ b/src/components/CountdownSetup/CountdownSetup.less
@@ -37,14 +37,50 @@
 .TimerSetup {
   text-align: center;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 2em 0;
   width: 200%;
-  height: 200px;
-  background-color: rgba(127, 228, 161, 0.1);
+  height: 120px;
   user-select: none;
   cursor: pointer;
   * {
     cursor: pointer;
+  }
+
+  .MinutePicker {
+    display: flex;
+    flex-direction: row;
+    width: 480px;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .MinuteInput {
+    display: inline-block;
+    border: none;
+    background: none;
+    outline: none;
+    width: 100px;
+    text-align: right;
+    font-family: 'Alfa Slab One', cursive;
+    font-weight: normal;
+    font-size: 4rem;
+    color: white;
+    text-align: center;
+    border-bottom: 2px solid white;
+    padding: 0;
+    margin-right: 0.5rem;
+
+    &::-webkit-outer-spin-button,
+    &::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+
+    -moz-appearance: textfield;
   }
 
   h1 {
@@ -53,7 +89,7 @@
     font-family: 'Alfa Slab One', cursive;
     font-weight: normal;
     font-size: 4rem;
-    span {
+    .unit {
       font-size: 2rem;
     }
   }
@@ -63,21 +99,6 @@
   width: 40%;
   pointer-events: none;
 }
-// input[type='range'] {
-//   pointer-events: none;
-// }
-
-// input[type='range']::-webkit-slider-thumb {
-//   pointer-events: auto;
-// }
-
-// input[type='range']::-moz-range-thumb {
-//   pointer-events: auto;
-// }
-
-// input[type='range']::-ms-thumb {
-//   pointer-events: auto;
-// }
 
 .CountdownSetupOmnibar {
   margin-top: 2rem;
