Updated counter style

--- a/src/components/Counter/Counter.less
+++ b/src/components/Counter/Counter.less
@@ -1,6 +1,8 @@
 .Counter {
-  font-family: monospace;
   font-size: 10em;
   position: relative;
   z-index: 1000;
+  font-family: 'Source Code Pro', monospace;
+  font-weight: normal;
+  color: white;
 }
